--- a/workflows.yml
+++ b/workflows.yml
@@ -230,7 +230,7 @@ software:
         name: ngircd
         repository: ngircd/ngircd
         refs:
-            stable: 3e3f6cbeceefd9357b53b27c2386bb39306ab353 # three years ahead of rel-26.1
+            stable: acf8409c60ccc96beed0a1f990c4f9374823c0ce # three months ahead of v27
             release: null
             devel: master
             devel_release: null
@@ -300,8 +300,8 @@ software:
         name: UnrealIRCd 6
         repository: unrealircd/unrealircd
         refs:
-            stable: da3c1c654481a33035b9c703957e1c25d0158259  # 6.0.7
-            release: da3c1c654481a33035b9c703957e1c25d0158259  # 6.0.7
+            stable: a68625454078641ce984eeb197f7e02b1857ab6c # 6.1.7.1
+            release: a68625454078641ce984eeb197f7e02b1857ab6c # 6.1.7.1
             devel: unreal60_dev
             devel_release: null
         path: unrealircd
