Add tests for Sable's postgresql chathistory backend

--- a/pytest.ini
+++ b/pytest.ini
@@ -7,7 +7,12 @@ markers =
     IRCv3
     modern
     ircdocs
+
+    # implementations for which we have specific test get two markers:
+    # the implementation name and 'implementation-specific'
+    implementation-specific
     Ergo
+    Sable
 
     # misc marks
     strict
