--- a/.github/workflows/test-devel.yml
+++ b/.github/workflows/test-devel.yml
@@ -448,7 +448,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -489,7 +489,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -524,7 +524,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -566,7 +566,7 @@ jobs:
         make build
         make install
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -607,7 +607,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -642,7 +642,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -683,7 +683,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -724,7 +724,7 @@ jobs:
         make -j 4
         make install
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -754,7 +754,7 @@ jobs:
       run: pip install git+https://github.com/progval/Limnoria.git@master cryptography
         pyxmpp2-scram
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -794,7 +794,7 @@ jobs:
         make install
         cp $GITHUB_WORKSPACE/data/nefarious/* $HOME/.local/lib
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -829,7 +829,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -870,7 +870,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -905,7 +905,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -946,7 +946,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -995,7 +995,7 @@ jobs:
         cd $GITHUB_WORKSPACE/sable/
         cargo build
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1030,7 +1030,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1059,7 +1059,7 @@ jobs:
     - name: Install dependencies
       run: pip install git+https://github.com/sopel-irc/sopel.git
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1099,7 +1099,7 @@ jobs:
         mkdir -p ~/.local/bin/
         ln -s $(pwd)/index.js ~/.local/bin/thelounge
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1134,7 +1134,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1169,7 +1169,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1210,7 +1210,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1245,7 +1245,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1291,7 +1291,7 @@ jobs:
         wget -q https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
         wget -q https://wordpress.org/latest.zip -O wordpress-latest.zip
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
