--- a/.github/workflows/test-stable.yml
+++ b/.github/workflows/test-stable.yml
@@ -491,7 +491,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -532,7 +532,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -567,7 +567,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -602,7 +602,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -644,7 +644,7 @@ jobs:
         make build
         make install
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -685,7 +685,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -720,7 +720,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -761,7 +761,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -796,7 +796,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -848,7 +848,7 @@ jobs:
         mkdir -p $HOME/.local/bin
         cp $HOME/.local/sbin/ircd $HOME/.local/bin/ircd
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -889,7 +889,7 @@ jobs:
         make -j 4
         make install
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -918,7 +918,7 @@ jobs:
     - name: Install dependencies
       run: pip install limnoria==2023.5.27 cryptography pyxmpp2-scram
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -958,7 +958,7 @@ jobs:
         make install
         cp $GITHUB_WORKSPACE/data/nefarious/* $HOME/.local/lib
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -993,7 +993,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1034,7 +1034,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1069,7 +1069,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1110,7 +1110,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1159,7 +1159,7 @@ jobs:
         cd $GITHUB_WORKSPACE/sable/
         cargo build
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1194,7 +1194,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1223,7 +1223,7 @@ jobs:
     - name: Install dependencies
       run: pip install sopel==7.1.8
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1263,7 +1263,7 @@ jobs:
         mkdir -p ~/.local/bin/
         ln -s $(pwd)/index.js ~/.local/bin/thelounge
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1298,7 +1298,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1333,7 +1333,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1374,7 +1374,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1409,7 +1409,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install atheme-services faketime
+      run: sudo apt-get install atheme-services faketime libjansson-dev
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
