--- a/workflows.yml
+++ b/workflows.yml
@@ -370,7 +370,7 @@ software:
         build_script: |
             pip install pifpaf
             wget -q https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
-            wget -q https://wordpress.org/latest.zip -O wordpress-latest.zip
+            wget -q https://wordpress.org/wordpress-6.7.2.zip -O wordpress-latest.zip
         env: >-
             IRCTEST_DLK_PATH="${{ github.workspace }}/Dlk-Services"
             IRCTEST_WP_CLI_PATH="${{ github.workspace }}/wp-cli.phar"
