Github doesn't allow dots in ids

--- a/workflows.yml
+++ b/workflows.yml
@@ -357,7 +357,7 @@ software:
             cmake -DCMAKE_INSTALL_PREFIX=$HOME/.local/ -DPROGRAM_NAME=anope -DUSE_PCH=ON -GNinja ..
             ninja install
 
-    anope-2.0:
+    anope-2-0:
         name: Anope 2.0
         repository: anope/anope
         separate_build_job: true
@@ -452,7 +452,7 @@ tests:
         software: [bahamut]
 
     bahamut-anope:
-        software: [bahamut, anope-2.0] # Anope 2.1.15 removes support for Bahamut
+        software: [bahamut, anope-2-0] # Anope 2.1.15 removes support for Bahamut
 
     charybdis:
         software: [charybdis]
