--- a/.github/workflows/test-stable.yml
+++ b/.github/workflows/test-stable.yml
@@ -42,7 +42,7 @@ jobs:
         name: installed-anope
         path: ~/artefacts-*.tar.gz
         retention-days: 1
-  build-anope-2.0:
+  build-anope-2-0:
     runs-on: ubuntu-22.04
     steps:
     - name: Create directories
@@ -50,7 +50,7 @@ jobs:
     - name: Cache dependencies
       uses: actions/cache@v4
       with:
-        key: 3-${{ runner.os }}-anope-2.0-stable
+        key: 3-${{ runner.os }}-anope-2-0-stable
         path: '~/.cache
 
           ${ github.workspace }/anope
@@ -75,11 +75,11 @@ jobs:
         cmake -DCMAKE_INSTALL_PREFIX=$HOME/.local/ -DPROGRAM_NAME=anope -DUSE_PCH=ON -GNinja ..
         ninja install
     - name: Make artefact tarball
-      run: cd ~; tar -czf artefacts-anope-2.0.tar.gz .local/ go/
+      run: cd ~; tar -czf artefacts-anope-2-0.tar.gz .local/ go/
     - name: Upload build artefacts
       uses: actions/upload-artifact@v4
       with:
-        name: installed-anope-2.0
+        name: installed-anope-2-0
         path: ~/artefacts-*.tar.gz
         retention-days: 1
   build-bahamut:
@@ -553,7 +553,7 @@ jobs:
   test-bahamut-anope:
     needs:
     - build-bahamut
-    - build-anope-2.0
+    - build-anope-2-0
     runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v4
@@ -569,7 +569,7 @@ jobs:
     - name: Download build artefacts
       uses: actions/download-artifact@v4
       with:
-        name: installed-anope-2.0
+        name: installed-anope-2-0
         path: '~'
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
